# IPC_handGhostws

./: .gitignore  CMakeLists.txt  DockerGuide.txt  IPC_handGhostws_init.sh  README.md  guide.txt
include/: CommonExampleInterface_G.h  CommonRigidBodyBase_G.h  GLInstancingRenderer.h  GhostAndRigidBodyBase_G.h  GhostExample.h  GhostExample_shrededws.h  GhostInterface.h  LoadMeshFromSTL.h  OpenGLGuiHelper.h  OpenGLInclude.h  SimpleCamera.h  SimpleOpenGL3App.h  X11OpenGLWindow.h
model/: TH.blend  TH.blend1  THWS.STL  THWS2.stl  WS_mesh.STL
model_shreded/finger_ws/: ws_p1.STL  ws_p2.STL  ws_p3.STL  ws_p4.STL  ws_p5.STL  ws_p6.STL
model_shreded/thumb_ws/: ws_p1.STL  ws_p2.STL  ws_p3.STL  ws_p4.STL  ws_p5.STL  ws_p6.STL
msg/: ghostws.msg  ghostws_shreded.msg  objState.msg  worldState.msg
panda3dCollision/: EnvManager.py  GhostWSServer.py  RX2_CUSTOM_BODYKIT.mtl  collision.py  game.py  state.py
panda3dCollisionC++/: CMakeLists.txt  guide.txt  panda_dependencies.sh  panda_install.sh
panda3dCollisionC++/config/: config.prc
panda3dCollisionC++/include/: GhostWorld.h
panda3dCollisionC++/src/: FF.egg  GhostWorld.cpp  GhostWorldServer.cpp  TH.egg  game.cpp
src/: GLInstancingRenderer.cpp  GhostExample.cpp  GhostExample_shrededws.cpp  GhostWorldServer.cpp  Ghostmain.cpp  Ghostmain_shrededws.cpp  OpenGLGuiHelper.cpp  SimpleOpenGL3App.cpp  X11OpenGLWindow.cpp  fontstash.cpp  opengl_fontstashcallbacks.cpp
srv/: ghostwses.srv  ghostwses_shreded.srv
unit_test/: CMakeLists.txt  unitTest.cpp
